--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "treval",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/PhanVanQuyet/treval.git",
+  "homepage": "https://github.com/PhanVanQuyet/treval",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
